<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_actionbar" >
        <item
            android:id="@+id/menuitem_creditos"
            android:icon="@drawable/ic_action_new"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_creditos" />
        <item
            android:id="@+id/menuitem_som"
            android:icon="@drawable/ic_sound"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_som"  />
        <item
            android:id="@+id/menuitem_sair"
            android:icon="@drawable/ic_action_cancel"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_sair"  />
        <item
            android:id="@+id/menuitem_voltar"
            android:icon="@drawable/ic_back"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_voltar" />
    </group>

</menu>