<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gomes.faunars_1.MainActivity">
    <group android:id="@+id/menu_actionbar" >
        <item
            android:id="@+id/menuitem_novo"
            android:icon="@drawable/ic_action_new"
           app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_creditos"
            />
        <item
            android:id="@+id/menuitem_som"
            android:icon="@drawable/ic_sound"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_som"  />
        <item
            android:id="@+id/menuitem_cancelar"
            android:icon="@drawable/ic_action_cancel"
            app:showAsAction="ifRoom|withText"
            android:title="@string/menu_item_sair"  />
    </group>
</menu>
